# evol

./: .gitignore  Cargo.toml  pgraph.ron  points.ron  pointss.ron  structure.ron
.cargo/: config.toml
assets/models/: aof_free.glb  aof_locked.glb  dof_pointer.glb
src/: camera.rs  main.rs  notes.txt  pgraph.rs  points.rs  selection.rs  structure.rs  util.rs
src/editor/: adjust.rs  body.rs  controls.rs  cursor.rs  delete.rs  dof.rs  grab.rs  joint.rs  mod.rs  muscle.rs  pgraph.rs  save.rs  selection.rs  ui.rs
src/observer/: body.rs  joint.rs  mod.rs  muscle.rs
