[package]
name = "evol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_mod_picking = "0.6"
bevy_mod_raycast = "0.4"
#mouse_tracking = { package = "bevy_mouse_tracking_plugin", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7.0"